Make sure the final linker (mpif90...) knows about c++ libs

--- a/makefiles/Makefile.Ubuntu_gfortran_cudahop_mpi
+++ b/makefiles/Makefile.Ubuntu_gfortran_cudahop_mpi
@@ -38,4 +38,4 @@ CUDA_OPTS=  -lcublas -lcurand -arch=sm_80 --ptxas-options=-v
 # BLAS and LAPACK libraries
 CUDA_LIBS= -L$(CUDA_HOME)/lib64
 OPENBLAS_PATH != spack find -p openblas | awk '/openblas/{print $$2}'
-LIBS= -L$(OPENBLAS_PATH)/lib -lopenblas $(CUDA_LIBS)
+LIBS= -L$(OPENBLAS_PATH)/lib -lopenblas $(CUDA_LIBS) -lstdc++
