--- a/makefiles/Makefile.CSC-Mahti_gfortran_openblas_mpi_hip_source
+++ b/makefiles/Makefile.CSC-Mahti_gfortran_openblas_mpi_hip_source
@@ -16,17 +16,20 @@
 # User-modifiable variables below
 
 # Compiler, preprocessor directives, etc.
-HOP_ROOT=/users/cristian/TurboGAP/hop
+# NOTE edit these for your own system!  Currently configured for spack + independent hop
+HOP_ROOT=$(HOME)/software/hop
+CUDA_HOME != spack find -p cuda | awk '/cuda/{print $$2}'
 F90=mpif90 -lstdc++
-CU=nvcc --resource-usage -lineinfo -O0 -x cu -I$(HOP_ROOT) -I$(HOP_ROOT)/source/hip  -DHOP_TARGET_CUDA
+CU=$(CUDA_HOME)/bin/nvcc --resource-usage -lineinfo -O3 -x cu -I$(HOP_ROOT) -I$(HOP_ROOT)/source/hip  -DHOP_TARGET_CUDA
 PP=-cpp -D _MPIF90 
 F90_MOD_DIR_OPT=-J
 
-CC=nvcc --resource-usage -lineinfo -O0 -x cu -std=c++17 -g -G -arch=sm_80 --ptxas-options=-v -I$(HOP_ROOT) -I$(HOP_ROOT)/source/hip  -DHOP_TARGET_CUDA
+CC=$(CUDA_HOME)/bin/nvcc --resource-usage -lineinfo -O3 -x cu -std=c++17 -arch=sm_80 --ptxas-options=-v -I$(HOP_ROOT) -I$(HOP_ROOT)/source/hip  -DHOP_TARGET_CUDA
+# Removed flags: -g -G
 
 # Optimization flags (uncomment second option to enable debugging tools)
 F90_OPTS= -g  -fPIC -O0  -ffree-line-length-none -fallow-argument-mismatch  #-ffpe-trap=invalid,zero,overflow #-Wall -Wuninitialized
-CUDA_OPTS= -O3 -g -G -lcublas  -arch=sm_80 --ptxas-options=-v
+CUDA_OPTS= -O3 -lcublas  -arch=sm_80 --ptxas-options=-v
 # gdwarf-4 needed for getting line information when sampling 
 #F90_OPTS+= -gdwarf-4
 #CUDA_OPTS+= -Xcompiler -gdwarf-4 
@@ -36,4 +39,7 @@ CUDA_OPTS= -O3 -g -G -lcublas  -arch=sm_80 --ptxas-options=-v
 #F90_OPTS+= -fbacktrace -fcheck=bounds -g -fcheck=all   -fbacktrace -Wall
 
 # BLAS and LAPACK libraries
-LIBS= -lopenblas  -lcudart   -lcublas 
+#LIBS= -lopenblas  -lcudart   -lcublas 
+CUDA_LIBS= -L$(CUDA_HOME)/lib64 -lcudart -lcublas
+OPENBLAS_PATH != spack find -p openblas | awk '/openblas/{print $$2}'
+LIBS= -L$(OPENBLAS_PATH)/lib -lopenblas $(CUDA_LIBS)
